syntax = "proto3";

package go.micro.srv.GetHouses;

service Example {
	rpc GetHouses(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string AreaId = 1;
	string Page = 2;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	bytes Data = 3;
	int64 TotalPages = 4;
	int64 Page = 5;
}
