syntax = "proto3";

package go.micro.srv.house;

service Example {
	rpc Add(AddRequest) returns (AddResponse) {}
	rpc GetHouseList(GetHouseListRequest) returns (GetHouseListResponse) {}
	rpc GetHouseDesc(GetHouseDescRequest) returns (GetHouseDescResponse) {}
	rpc UploadImage(UploadImageRequest) returns (UploadImageResponse) {}
	rpc GetIndexList(GetIndexListRequest) returns (GetIndexListResponse) {}
}

message Message {
	string say = 1;
}

message AddRequest {
	string Mobile = 1;
	bytes Data = 2;
}

message AddResponse {
	string Code = 1;
	string Msg = 2;
}

message GetHouseListRequest {
	string Mobile = 1;
}

message GetHouseListResponse {
	string Code = 1;
	string Msg = 2;
	bytes Data = 3;
}

message GetHouseDescRequest {
	string HouseId = 1;
}

message GetHouseDescResponse {
	string Code = 1;
	string Msg = 2;
	bytes Data = 3;
}

message UploadImageRequest {
	string Mobile = 1;
	string HouseId = 2;
	bytes Data = 3;
	string FileName = 4;
	int64 FileSize = 5;
}

message UploadImageResponse {
	string Code = 1;
	string Msg = 2;
}

message GetIndexListRequest {

}

message GetIndexListResponse {
	string Code = 1;
	string Msg = 2;
	bytes Data = 3;
}
